Get rid of some compile warnings.

--- a/TODO
+++ b/TODO
@@ -2,7 +2,6 @@
 * Fix sending backprop parameters into network
 * Add stopping criteria
 * Additional backprop options
-  - Weight decay
   - delta-bar-delta
 * Clean up N-W weight initialization
 * Clean up using Network/NetworkTrainer class in Backprop classes
@@ -19,3 +18,4 @@ DONE
 * Add tanh activation
 * Add weight update normalization option
 * Add better reporting for total error in network
+* Add weight decay
